# mcprobe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mcprobe.yml
docs/: SPEC.md  index.md
docs/agents/: adk-agent.md  custom-agents.md  overview.md  simple-agent.md
docs/analysis/: flaky-detection.md  stability.md  trends.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/cli/: analysis.md  generate.md  reference.md  run.md  serve.md
docs/configuration/: reference.md
docs/getting-started/: first-scenario.md  installation.md  quickstart.md
docs/integration/: claude-code.md
docs/pytest/: integration.md
docs/reporting/: ci-integration.md  html-reports.md  json-export.md  overview.md
docs/scenarios/: evaluation.md  examples.md  format.md  synthetic-user.md
examples/: agent_factory.py
examples/scenarios/: simple_greeting.yaml
src/mcprobe/: __init__.py  exceptions.py
src/mcprobe/agents/: __init__.py  adk.py  base.py  simple.py
src/mcprobe/analysis/: __init__.py  flaky.py  models.py  trends.py
src/mcprobe/cli/: __init__.py  main.py
src/mcprobe/config/: __init__.py  loader.py
src/mcprobe/generator/: __init__.py  generator.py  mcp_client.py  prompts.py  template_loader.py
src/mcprobe/generator/templates/: __init__.py  adversarial.yaml  clarification.yaml  edge_case.yaml  efficiency.yaml  happy_path.yaml
src/mcprobe/judge/: __init__.py  judge.py  prompts.py
src/mcprobe/models/: __init__.py  config.py  conversation.py  judgment.py  scenario.py
src/mcprobe/orchestrator/: __init__.py  orchestrator.py
src/mcprobe/parser/: __init__.py  scenario.py
src/mcprobe/persistence/: __init__.py  loader.py  models.py  storage.py
src/mcprobe/providers/: __init__.py  base.py  factory.py  ollama.py  openai_compat.py
src/mcprobe/pytest_plugin/: __init__.py  plugin.py
src/mcprobe/reporting/: __init__.py  html_generator.py  json_generator.py  junit_generator.py
src/mcprobe/reporting/templates/: report.html  styles.css
src/mcprobe/server/: __init__.py  server.py
src/mcprobe/synthetic_user/: __init__.py  prompts.py  user.py
tests/: __init__.py
tests/e2e/: test_scenario_generation_e2e.py
tests/integration/: test_generation.py  test_phase3_evaluation.py  test_pytest_plugin.py
tests/unit/: test_cli_parse_since.py  test_config_loader.py  test_conversation_models.py  test_flaky.py  test_generator.py  test_judge_prompts.py  test_judgment_models.py  test_mcp_client.py  test_ollama_provider.py  test_openai_provider.py  test_persistence.py  test_prompt_tracking.py  test_prompts.py  test_reporting.py  test_scenario_skip.py  test_server.py  test_synthetic_user.py  test_template_loader.py  test_trends.py
